# marketing-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  COMPLETE_TECH_IMPLEMENTATION.md  CONTRIBUTING.md  DEMO_GUIDE.md  DEMO_INSTRUCTIONS.md  DOCUMENTATION_SUMMARY.md  FULL_STACK_DEMO.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  run_demo.ps1  run_demo.sh  start_demo.ps1  start_frontend.ps1  start_frontend_only.ps1  start_with_logs.ps1
.buildkite/: pipeline.yml
.circleci/: config.yml
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  cicd_issue.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  evaluation.yml  pr-checks.yml  release.yml  security.yml
.jenkins/: Jenkinsfile
docker/: docker-compose.test.yml
docs/: .env.example  .gitignore  AIOPS_SUMMARY.md  AI_OBSERVABILITY.md  ARCHITECTURE_DIAGRAM.md  CICD_QUICKSTART.md  CICD_QUICK_REFERENCE.md  CICD_SETUP_GUIDE.md  CI_CD_COMPLETE_GUIDE.md  CI_CD_PIPELINE.md  CI_CD_QUICK_REFERENCE.md  DATADOG_INTEGRATION.md  DOCUMENTATION_INDEX.md  GITHUB_WORKFLOWS_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  INFRASTRUCTURE_DOCS_INDEX.md  README.md
docs/architecture/: AIOPS_DESIGN_PATTERNS.md  AI_AGENTIC_REASONING_ARCHITECTURE.md  CICD_ARCHITECTURE_DEEP_DIVE.md  README.md
docs/deployment/: AWS_AIOPS_CICD_SYSTEM_DESIGN.md  CICD_SUMMARY.md  GCP_AIOPS_CICD_SYSTEM_DESIGN.md  TERRAFORM_SETUP.md
docs/getting-started/: GETTING_STARTED.md  QUICK_START.md  QUICK_START_FRONTEND.md
docs/guides/: PRODUCTION_PATTERNS.md
docs/reference/: COMPLETE_IMPLEMENTATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  PROJECT_STRUCTURE.md  REQUIREMENTS_COVERAGE.md  SKILLS_SHOWCASE.md
frontend/: .dockerignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
infrastructure/: README.md
scripts/: README.md  backup-db.sh  build-and-push.sh  check_evaluation_thresholds.py  deploy.sh  generate_evaluation_report.py  health-check.sh  migrate-db.sh  rollback.sh  run_evaluation.py
src/: __init__.py
tests/: __init__.py  conftest.py
(+81 files in other folders)
